pgadmin/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dita-pgadmin.hasankarimi.ir
      secretName: pgadmin-tls
  rules:
    - host: dita-pgadmin.hasankarimi.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
